[build-system]
requires = [
    "wheel",
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "marvelmind_pylib"
authors = [
    {name = "Alberto Ramos Sánchez", email = "alberto.ramos104@alu.ulpgc.es" }
]
version = "1.0.0"
requires-python = ">=3.11"
description = "Marvelmind python port"

[tool.setuptools]
packages = ["marvelmind_pylib"]
include-package-data = true

[tool.setuptools.package-data]
"marvelmind_pylib" = ["*.pyd"]